files/whoami/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: whoami
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
  selector:
    app: whoami
