files/whoami/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami
spec:
  rules:
    - host: whoami.techn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
